--- a/hyprshell/widget/Bar.scss
+++ b/hyprshell/widget/Bar.scss
@@ -5,14 +5,16 @@ $fg: #f1f1f1;
 $accent: #378DF7;
 $radius: 7px;
 
+window* {
+    font-family: 'Adwaita Sans';
+    font-size: 15px;
+}
+
 window.Bar {
     border: none;
     box-shadow: none;
     background: transparent;
-    //background-color: $bg;
     color: $fg;
-    font-family: 'Adwaita Sans';
-    font-size: 15px;
     font-weight: bold;
 
     label {
