--- a/hyprshell/widget/Notifications.scss
+++ b/hyprshell/widget/Notifications.scss
@@ -9,28 +9,49 @@ $radius: 7px;
 
 window.notification_popup {  
     border-radius: 18px;
-    background: color.adjust($fg, $alpha: -0.8);
+    background: color.adjust($bg, $alpha: -0.2);
 
     .container {
-        margin: 10px;
-        min-width: 400px;
+        margin-left: 13px;
+        margin-top: 9px;
+
+        min-width: 500px;
 
         .image {
-            min-width: 100px;
-            min-height: 100px;
-            border-radius: 18px;
-            margin: 0 10px 0 0;
+            min-width: 48px;
+            min-height: 48px;
+            margin-right: 10px;
             background-size: cover;
             background-position: center;
         }   
 
         .header {
-            font-weight: bold;
+            margin-bottom: 6px;
+            margin-left: 1px;
+            margin-right: 9px;
+
+            .icon {
+                margin-right: 6px;
+            }
+            .name {
+                font-weight: bold;
+            }
+            .close {
+                min-width: 24px;
+                min-height: 24px;
+                padding: 0px;
+            }
         }
 
         .content {  
+            margin-top: 2px;
+            margin-bottom: 13px;
+
             .summary {
                 font-weight: bold;
+            }
+            .body {
+                margin-top: 4px;
             }
         }
     };
